--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
     "vite": "^7.2.4"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.60.0",
+    "@clerk/react-router": "^2.4.3",
+    "@react-router/dev": "^7.13.0",
+    "@tailwindcss/vite": "^4.1.18",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-router-dom": "^7.11.0"
+    "react-router": "^7.13.0",
+    "react-router-dom": "^7.11.0",
+    "tailwindcss": "^4.1.18"
   }
 }
